--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,14 @@
     transform: rotate(360deg);
   }
 }
+
+.mapboxgl-canvas {
+  width: 100%;
+    padding: 1rem 3.75rem 1rem 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    z-index: 500;
+}
