--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -39,5 +39,12 @@
     align-items: center;
     position: fixed;
     bottom: 0;
-    z-index: 500;
+    z-index: -500;
+}
+
+div .mapboxgl-canvas-container{
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
 }
