--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
 .App-link {
@@ -29,4 +22,17 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.WorldMap-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  background: url('https://s3.thingpic.com/images/dS/TmSj2SaFrUim3X5WWTK4oamP.jpeg');
+  background-size:cover;
 }
