--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,6 @@
   height: 40vmin;
 }
 
-.App-header {
-
-}
 
 .App-link {
   color: #61dafb;
@@ -76,7 +73,11 @@ transform: translate(-1355px, 230px);
 }
 
 #instructionsButton{
-  margin-left: 4000px;
+margin-left: 50px;
+}
+
+#missionsButton{
+  margin-left: 3900px;
 }
 
 .battleBox{
@@ -93,4 +94,23 @@ div {
   font-family: 'Merriweather Sans', sans-serif;
   font-weight: 600;
   font-size: 45px;
+}
+
+.navbar-brand-welcome {
+  font-family: 'Merriweather Sans', sans-serif;
+  font-weight: 600;
+  font-size: 45px;
+}
+
+.navbar  {
+    font-size: 18px;
+    background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf   100%);
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 0;
+    height: 70px;
+    align-items: center;
+    height: 180px;
 }
